<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Talómọ̀ọ́ o</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_send">Send</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Search</string>
    <string name="posting">Posting Your Question</string>
    <string name="successful">Your question is now on Facebook</string>
    <string name="action_share">Tell a friend!</string>
    <string name="welcome">Talómọ̀ọ́ o</string>
    <!--     <string name="welcome">Test Your Knowledge Of Yoruba</string> -->
    <string name="play_offline">Play Offline</string>
    <string name="play_online">Play Online</string>
    <string name="leader_board">Leader Board</string>
    <string name="about">About</string>
    <string name="reminder">Remind Me!</string>
    <string name="fullname_eng">First and last name</string>
    <string name="password_eng">Password</string>
    <string name="email_string">Email Address</string>
    <string name="phone_eng">"Phone Number "</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="username_eng">Your unique ID</string>
    <string name="email_eng">someone@example.com</string>
    <string name="title_activity_categories">ListActivity</string>
    <string name="title_activity_options">MainActivity</string>
    <string name="title_activity_mylist">MainActivity</string>
    <string name="title_activity_category_list">Categories</string>
    <string name="title_activity_select_question_number">MainActivity</string>
    <string name="title_activity_myteeth">MainActivity</string>
    <string name="title_activity_sign_up_and_login">SignUpAndLogin</string>
    <string name="title_activity_facebook_login">Facebook Login</string>
    <string name="txtWindSpeed">WindSpeed</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="Separator">---</string>

    <drawable name="actionbar_background">#1f1f1f</drawable>

    <color name="actionbar_text">#fff</color>
    <color name="actionbar_tab">#333</color>

    <string name="title_activity_list">Categories</string>
    <string name="app_id">152710554939550</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_questions">Talómọ̀ọ́ o</string>
    <string name="choose_answer">Choose your Answer</string>
    <string name="total_score">Current score</string>
    <string name="play_audio">Play Audio</string>
    <string name="next_question">Next</string>
    <string name="question_no">Question</string>
    <string name="explanation">Explanation</string>
    <string name="explanation_text">"Dummy Explanation Tes dddd dddddd dddddddd ddddddddd Tes
        dddd dddddd dddddddd ddddddddd Tes dddd dddddd dddddddd ddddddddd Tes dddd dddddd dddddddd
        ddddddddd "</string>
    <string name="answer_option_A">A.</string>
    <string name="answer_option_B">B.</string>
    <string name="answer_option_D">D.</string>

    <string name="pref_language_yor">Yor</string>
    <string name="pref_language_eng">Eng</string>
    <string name="language_preference">Language</string>
    <string name="language_preference_title">Change Language</string>
    <string name="to_yoruba">To Yoruba</string>
    <string name="to_english">To English</string>
    <string name="ten_questions">10 questions</string>
    <string name="twenty_questions">20 questions</string>
    <string name="fifty_questions">50 questions</string>
    <string name="title_activity_test">TestActivity</string>

</resources>