<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true" >

    <ScrollView
        android:id="@+id/page_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/question_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/left"
                    android:padding="5dp"
                    android:background="#ffdedede"
                    android:id="@+id/arrow_left"
                    android:layout_alignBottom="@+id/text_category" />

                <TextView
                    android:id="@+id/text_category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Category"
                    android:textAllCaps="true"
                    android:textColor="#ff5A6A77"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_alignBottom="@+id/arrow_right"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:background="#ffdedede"
                    android:src="@drawable/right"
                    android:id="@+id/arrow_right" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginBottom="10dp"
                    android:background="#ffdedede"
                    android:layout_below="@+id/arrow_left" />

                <LinearLayout
                    android:id="@+id/lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view"
                    android:padding="5dp"
                    android:background="#ffF8F8F8"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:layout_marginLeft="10dp"
                        android:textColor="#444"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_question"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"

                        android:text="Large Text local String Encrypter. decrypt (localCursor1 .getString (localCurs or1.g etColumnIn dexOrThrow"
                        android:textColor="#444"
                        android:textSize="18sp" />
                </LinearLayout>



                <TextView
                    android:id="@+id/choose_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lay"
                    android:layout_marginBottom="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/choose_answer"
                    android:textColor="#ff33b5e4"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/choose_answer"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_option_A"
                            android:textColor="#99000000"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/button_option1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="start|center"
                            android:paddingBottom="10dp"
                            android:paddingLeft="7dp"
                            android:paddingTop="10dp"
                            android:textColor="#99000000"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <View
                        android:id="@id/view"
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="#ff33b5e4" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_option_B"
                            android:textColor="#99000000"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/button_option2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="left|center"
                            android:paddingBottom="10dp"
                            android:paddingLeft="7dp"
                            android:paddingTop="10dp"
                            android:textColor="#99000000"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <View
                        android:id="@id/view"
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="#ff33b5e4" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_option_D"
                            android:textColor="#99000000"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/button_option3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="start|center"
                            android:paddingBottom="10dp"
                            android:paddingLeft="7dp"
                            android:paddingTop="10dp"
                            android:textAllCaps="false"
                            android:textColor="#99000000"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <View
                        android:id="@id/view"
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:background="#ff33b5e4" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_layout"
                android:layout_marginBottom="100dp"
                android:background="#e8e8e8"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/explanation"
                    android:textColor="#ff33b5e4"
                    android:id="@+id/explanation"
                    android:textSize="17sp"
                    android:textStyle="bold" />



                <TextView
                    android:id="@+id/explanation_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/view"
                    android:text="@string/explanation_text"
                    android:textSize="16.5sp" />

                <View
                    android:id="@id/view"
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:layout_below="@id/explanation"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#ff7b7b7b" />


            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>



    <Button
        android:id="@+id/post_online"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:background="#ffdddddd"
        android:lines="2"
        android:text="post to facebook"
        android:textAllCaps="true"
        android:textColor="#333333"
        android:textSize="15sp"
        android:textStyle="bold" />


</RelativeLayout>